fdo#51180 reset (Multi)Selection on Clear()

Change-Id: I06dde63093eab4e5e1c692f6363aca70b89de96a
Reviewed-on: https://gerrit.libreoffice.org/7429
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>